Fixed the layout issue

--- a/src/components/Welcome/Welcome.less
+++ b/src/components/Welcome/Welcome.less
@@ -1,7 +1,7 @@
 @import '../App/Colors.less';
 @import '../App/Common.less';
 .welcomeComponent {
-  display: block;
+  display: block !important;
   h3 {
     font-size: 20px;
     padding: 40px 0;
